--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
   <body>
     <div class="container">
       <section class="game">
-        <div class="score">
-          <h2>SCORE</h2>
-          <p><span id="score1">0</span></p>
+        <div class="top-info">
+          <div class="click">
+            <h2>
+              <i class="fa-solid fa-arrow-pointer"></i>
+              <span id="click">0</span>
+            </h2>
+          </div>
+
+          <div class="score">
+            <h2>SCORE</h2>
+            <p id="score">0</p>
+          </div>
+          <div class="reset">
+            <span><i class="fa-solid fa-arrows-rotate"></i></span>
+          </div>
         </div>
-        <button class="reset"><i class="fa-solid fa-arrows-rotate"></i></button>
 
         <div class="box">
           <div></div>
@@ -32,6 +43,11 @@
           <div></div>
           <div></div>
           <div></div>
+        </div>
+
+        <div class="over">
+          <h2>Game Over</h2>
+          <p id="over">RESTART</p>
         </div>
       </section>
     </div>
